--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
+
+
 body {
   font-family: 'Comfortaa', sans-serif;
 }
+
+/* Fonts */
 
 h1 {
   font-size: 3.5rem;
@@ -8,18 +12,26 @@ h1 {
   font-weight: bolder;
 }
 
+h3 {
+  font-size: 1.5rem;
+  line-height: 1;
+  font-weight: bolder;
+}
+
+p {
+  color: gray;
+}
+
+/* Title Section */
+
 #title {
   background-color: #212121;
   color: #fff;
 }
 
+
 .container-fluid {
   padding: 3% 15%;
-}
-
-.logo-image {
-  max-width: 30px;
-  margin: 10px 20px;
 }
 
 .title-image {
@@ -34,11 +46,16 @@ h1 {
 }
 
 .navbar-brand {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
-.nav-item {
+.nav-logo {
+  width: 6%;
   padding: 0 18px;
+  animation: rotation 50s linear infinite;
+}
+.nav-item {
+  padding: 18px;
 }
 
 .nav-link {
@@ -47,8 +64,43 @@ font-weight: lighter;
 
 }
 
+
+
+
 /* Download Buttons */
 
 .download-button {
   margin: 5% 3% 5% 0;
+}
+
+
+/* Feature Section */
+
+#features {
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.feature-image {
+  max-height: 80px;
+  margin: 0 20px 20px;
+
+}
+
+.feature-box {
+  margin-bottom: 0;
+  position: relative;
+  padding: 4.5%;
+}
+
+
+/* Animations */
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
