--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,30 @@ h1 {
   font-weight: bolder;
 }
 
+h2 {
+  font-size: 2rem;
+  line-height: 1.5;
+  color: #fff;
+}
+
 h3 {
   font-size: 1.5rem;
   line-height: 1;
-  font-weight: bolder;
 }
 
 p {
   color: gray;
+}
+
+hr {
+  border: dotted gray 4px;
+  border-bottom: none;
+  width: 5%;
+  margin: 100px auto;
+}
+
+em {
+  color: #fff;
 }
 
 /* Title Section */
@@ -64,21 +80,12 @@ font-weight: lighter;
 
 }
 
-
-
-
-/* Download Buttons */
-
-.download-button {
-  margin: 5% 3% 5% 0;
-}
-
-
 /* Feature Section */
 
 #features {
   padding: 7% 15%;
   text-align: center;
+  background:
 }
 
 .feature-image {
@@ -91,6 +98,25 @@ font-weight: lighter;
   margin-bottom: 0;
   position: relative;
   padding: 4.5%;
+}
+
+/* Testimonials section */
+
+#testimonials {
+  text-align: center;
+  background-color: #212121;
+  height: 400px;
+}
+
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+/* Buttons */
+
+.download-button {
+  margin: 5% 3% 5% 0;
 }
 
 
