--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: 'Comfortaa', sans-serif;
 }
@@ -23,22 +21,14 @@ h3 {
   line-height: 1.5;
 }
 
-h4{
+h4 {
   font-size: 2rem;
   line-height: 1.5;
   font-weight: bolder;
 }
 
-
 p {
   color: gray;
-}
-
-hr {
-  border: dotted gray 4px;
-  border-bottom: none;
-  width: 5%;
-  margin: 100px auto;
 }
 
 em {
@@ -46,16 +36,13 @@ em {
 }
 
 /* Title Section */
-
 #title {
   background-color: #212121;
   color: #fff
 }
 
-
 .container-fluid {
   padding: 3% 15% 30%;
-
 }
 
 .title-image {
@@ -64,12 +51,9 @@ em {
   position: absolute;
   right: 25%;
   top: 5%;
-
-
 }
 
 /* Navigation Bar */
-
 .navbar {
   padding: 0 0 4.5rem;
 }
@@ -83,30 +67,27 @@ em {
   width: 4%;
   animation: rotation 50s linear infinite;
 }
+
 .nav-item {
   padding: 18px;
 }
 
 .nav-link {
-font-size: 1rem;
-font-weight: lighter;
-
+  font-size: 1rem;
+  font-weight: lighter;
 }
 
 /* Feature Section */
-
 #features {
   padding: 7% 15%;
   text-align: center;
   background-color: #fff;
   position: relative;
-
 }
 
 .feature-image {
   max-height: 80px;
   margin: 0 20px 20px;
-
 }
 
 .feature-box {
@@ -115,50 +96,67 @@ font-weight: lighter;
 }
 
 /* Testimonials Section */
-
 #testimonials {
   text-align: center;
   background-color: #212121;
   height: 400px;
 }
 
-
 .carousel-item {
   padding: 7% 15%;
 }
-
 
 /* Plans Section */
 #plans {
   padding: 100px;
   text-align: center;
-
 }
 
 .plan-column {
   padding: 3% 2%;
   text-align: center;
-
-
-
 }
 
-
 /* Buttons */
-
 .download-button {
   margin: 5% 3% 5% 0;
 }
 
+/* Mobile Friendliness */
+@media (max-width: 1041px) {
+  h1 {
+    font-size: 2.5rem;
+  }
 
+  h2 {
+    font-size: 1.5rem;
+  }
 
+  #title {
+    text-align: center;
+  }
+
+  #testimonials {
+    height: 380px;
+  }
+
+  .title-image {
+    margin: 15% auto;
+    position: static;
+    transform: rotate(0);
+  }
+
+  .nav-logo {
+    width: 10%;
+  }
+}
 
 /* Animations */
-
 @keyframes rotation {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(359deg);
   }
