--- a/css/styles.css
+++ b/css/styles.css
@@ -122,10 +122,11 @@ em {
   background-color: #212121;
   text-align: center;
   height: 500px;
-  padding: 10% 10%;
 }
 
-
+.cta-header {
+  padding: 7% 15%;
+}
 
 
 /* Buttons */
